// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`V4 Requestor can create data through a call 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
<meta charset=\\"utf-8\\">
<title>Error</title>
</head>
<body>
<pre>Cannot POST /tenant-002/sap/fe/core/mock/action/RootElement</pre>
</body>
</html>
"
`;

exports[`V4 Requestor can get the metadata 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
<meta charset=\\"utf-8\\">
<title>Error</title>
</head>
<body>
<pre>Cannot GET /sap/fe/core/mock/action/$metadata</pre>
</body>
</html>
"
`;

exports[`V4 Requestor can get the serviceCatalog 1`] = `"{\\"d\\":{\\"results\\":[{\\"ID\\":\\"action\\"}]}}"`;

exports[`V4 Requestor can get the serviceCatalog 2`] = `"{\\"d\\":{\\"results\\":[{\\"TechnicalName\\":\\"action\\",\\"Version\\":2}]}}"`;

exports[`V4 Requestor can get updated the sticky header timeout 1`] = `""`;

exports[`V4 Requestor can get updated the sticky header timeout for a tenant 1`] = `null`;

exports[`V4 Requestor can reload the data 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
<meta charset=\\"utf-8\\">
<title>Error</title>
</head>
<body>
<pre>Cannot POST /sap/fe/core/mock/action/$metadata/reload</pre>
</body>
</html>
"
`;

exports[`V4 Requestor can update data through a call 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
<meta charset=\\"utf-8\\">
<title>Error</title>
</head>
<body>
<pre>Cannot POST /tenant-001/sap/fe/core/mock/action/RootElement</pre>
</body>
</html>
"
`;

exports[`V4 Requestor can update data through a call 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
<meta charset=\\"utf-8\\">
<title>Error</title>
</head>
<body>
<pre>Cannot PATCH /tenant-001/sap/fe/core/mock/action/RootElement(ID=556)</pre>
</body>
</html>
"
`;
